--- a/Final_CK_Web/add-product.html
+++ b/Final_CK_Web/add-product.html
@@ -51,96 +51,13 @@
     </head>
     <body ng-controller="addProductController">
 
-        <div class="header-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="user-menu">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
-                                <li><a href="#"><i class="fa fa-heart"></i> Wishlist</a></li>
-                                <li><a href="cart.html"><i class="fa fa-user"></i> My
-                                        Cart</a></li>
-                                <li><a href="checkout.html"><i class="fa fa-user"></i>
-                                        Checkout</a></li>
-                                <li><a href="#"><i class="fa fa-user"></i> Login</a></li>
-                            </ul>
-                        </div>
-                    </div>
+        <div ng-include="'template/header.htm'"></div>
 
-                    <div class="col-md-4">
-                        <div class="header-right">
-                            <ul class="list-unstyled list-inline">
-                                <li class="dropdown dropdown-small"><a
-                                        data-toggle="dropdown" data-hover="dropdown"
-                                        class="dropdown-toggle" href="#"><span class="key">currency
-                                            :</span><span class="value">USD </span><b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">USD</a></li>
-                                        <li><a href="#">INR</a></li>
-                                        <li><a href="#">GBP</a></li>
-                                    </ul></li>
-
-                                <li class="dropdown dropdown-small"><a
-                                        data-toggle="dropdown" data-hover="dropdown"
-                                        class="dropdown-toggle" href="#"><span class="key">language
-                                            :</span><span class="value">English </span><b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">English</a></li>
-                                        <li><a href="#">French</a></li>
-                                        <li><a href="#">German</a></li>
-                                    </ul></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- End header area -->
-
-        <div class="site-branding-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="logo">
-                            <h1>
-                                <a href="index.html">e<span>Electronics</span></a>
-                            </h1>
-                        </div>
-                    </div>
-
-                    
-                </div>
-            </div>
-        </div>
+        <div ng-include="'template/brand.htm'"></div>
         <!-- End site branding area -->
 
-        <div class="mainmenu-area">
-            <div class="container">
-                <div class="row">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span> <span
-                                class="icon-bar"></span> <span class="icon-bar"></span> <span
-                                class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop page</a></li>
-                            <li><a href="single-product.html">Single product</a></li>
-                            <li class="active"><a href="cart.html">Add Product</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
-                            <li><a href="#">Category</a></li>
-                            <li><a href="#">Others</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div ng-include="'template/main-menu.htm'"></div>
         <!-- End mainmenu area -->
 
         <div class="product-big-title-area">
@@ -174,8 +91,8 @@
 
                         <div class="form-group">
                             <label for="password" >Giá Khuyến mãi</label><input ng-model="sellPrice" type="number"
-                                                                               size="4" class="input-text qty text form-control" title="Qty"
-                                                                               value="1" min="0" step="1">
+                                                                                size="4" class="input-text qty text form-control" title="Qty"
+                                                                                value="1" min="0" step="1">
                         </div>
 
                         <div class="form-group">
@@ -184,9 +101,9 @@
 
                         </textarea>
                         <script>
-                            // Replace the <textarea id="editor1"> with a CKEditor
-                            // instance, using default configuration.
-                            //CKEDITOR.replace('"txtDescription"');
+                                    // Replace the <textarea id="editor1"> with a CKEditor
+                                    // instance, using default configuration.
+                                    //CKEDITOR.replace('"txtDescription"');
                         </script>
                     </div>
                     <div class="form-group">
@@ -212,97 +129,10 @@
     </div>
     <!-- End Content -->
 
-    <div class="footer-top-area">
-        <div class="zigzag-bottom"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="footer-about-us">
-                        <h2>
-                            e<span>Electronics</span>
-                        </h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Perferendis sunt id doloribus vero quam laborum quas alias
-                            dolores blanditiis iusto consequatur, modi aliquid eveniet
-                            eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit,
-                            debitis, quisquam. Laborum commodi veritatis magni at?</p>
-                        <div class="footer-social">
-                            <a href="#" target="_blank"><i class="fa fa-facebook"></i></a> <a
-                                href="#" target="_blank"><i class="fa fa-twitter"></i></a> <a
-                                href="#" target="_blank"><i class="fa fa-youtube"></i></a> <a
-                                href="#" target="_blank"><i class="fa fa-linkedin"></i></a> <a
-                                href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
-                        </div>
-                    </div>
-                </div>
+     <div ng-include="'template/footer.htm'"></div>
+        <!-- End footer  area -->
 
-                <div class="col-md-3 col-sm-6">
-                    <div class="footer-menu">
-                        <h2 class="footer-wid-title">User Navigation</h2>
-                        <ul>
-                            <li><a href="#">My account</a></li>
-                            <li><a href="#">Order history</a></li>
-                            <li><a href="#">Wishlist</a></li>
-                            <li><a href="#">Vendor contact</a></li>
-                            <li><a href="#">Front page</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="footer-menu">
-                        <h2 class="footer-wid-title">Categories</h2>
-                        <ul>
-                            <li><a href="#">Mobile Phone</a></li>
-                            <li><a href="#">Home accesseries</a></li>
-                            <li><a href="#">LED TV</a></li>
-                            <li><a href="#">Computer</a></li>
-                            <li><a href="#">Gadets</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="col-md-3 col-sm-6">
-                    <div class="footer-newsletter">
-                        <h2 class="footer-wid-title">Newsletter</h2>
-                        <p>Sign up to our newsletter and get exclusive deals you wont
-                            find anywhere else straight to your inbox!</p>
-                        <div class="newsletter-form">
-                            <form action="#">
-                                <input type="email" placeholder="Type your email"> <input
-                                    type="submit" value="Subscribe">
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End footer top area -->
-
-    <div class="footer-bottom-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="copyright">
-                        <p>
-                            &copy; 2015 eElectronics. All Rights Reserved. Coded with <i
-                                class="fa fa-heart"></i> by <a href="http://wpexpand.com"
-                                target="_blank">WP Expand</a>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="footer-card-icon">
-                        <i class="fa fa-cc-discover"></i> <i class="fa fa-cc-mastercard"></i>
-                        <i class="fa fa-cc-paypal"></i> <i class="fa fa-cc-visa"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End footer bottom area -->
+    
 
     <!-- Latest jQuery form server -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
@@ -323,14 +153,14 @@
 
     </script>
     <script type="text/javascript">
-        $(".product-remove").on("click", function () {
+                $(".product-remove").on("click", function () {
 
-            var $killrow = $(this).parent('tr');
-            $killrow.addClass("danger");
-            $killrow.fadeOut(1000, function () {
-                $(this).remove();
-            });
-        });
+                    var $killrow = $(this).parent('tr');
+                    $killrow.addClass("danger");
+                    $killrow.fadeOut(1000, function () {
+                        $(this).remove();
+                    });
+                });
     </script>
 </body>
 </html>
