--- a/Final_CK_Web/index.html
+++ b/Final_CK_Web/index.html
@@ -32,14 +32,21 @@
             };
             firebase.initializeApp(config);
         </script>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-78939206-1', 'auto');
-			ga('send', 'pageview');
-		</script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-78939206-1', 'auto');
+            ga('send', 'pageview');
+        </script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
         <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
@@ -59,84 +66,14 @@
     </head>
     <body ng-controller="IndexCtr">
 
-        <div class="header-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="user-menu">
-                            <ul>                              
-                                <li><a href="cart.html"><i class="fa fa-user"></i> My Cart</a></li>
-                                <li><a href="checkout.html"><i class="fa fa-user"></i> Checkout</a></li>
-                                <li><a href="login.html"><i class="fa fa-user"></i> Login</a></li>
-                            </ul>
-                        </div>
-                    </div>
+        <div ng-include="'template/header.htm'"></div>
 
-                    <div class="col-md-4" >
-                        <div class="header-right">
-                            <ul class="list-unstyled list-inline">
-                                <li class="dropdown dropdown-small">
-                                    <a ng-show="LoginDN" href="{{author.link}}" class="key">{{author.username}} </a>
-									
-                                </li>
+        <!-- End header area -->
+        <div ng-include="'template/brand.htm'"></div>
+        <!-- End site branding area -->
 
-                                <li class="dropdown dropdown-small">
-                                    <a class="key" ng-show='LoginDX' ng-click="logoutUp()">Đăng xuất </a>
-
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- End header area -->
-
-        <div class="site-branding-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="logo">
-                            <h1><a href="index.html">e<span>Electronics</span></a></h1>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <div class="shopping-item">
-                            <a href="cart.html">Cart - <span class="cart-amunt">{{listCart.totalPrice}}</span> <i class="fa fa-shopping-cart"></i> <span class="product-count">{{listCart.listCart.length}}</span></a>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- End site branding area -->
-
-        <div class="mainmenu-area">
-            <div class="container">
-                <div class="row">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div> 
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop page</a></li>
-                            <li><a href="single-product.html">Single product</a></li>
-                            <li><a href="cart.html">Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
-							<li><a ng-show="admin" href="add-product.html">Add Product</a></li>
-                            <li><a href="#">Category</a></li>
-                            <li><a href="#">Others</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>  
-                </div>
-            </div>
-        </div> <!-- End mainmenu area -->
+        <div ng-include="'template/main-menu.htm'"></div>
+        <!-- End mainmenu area -->
 
         <div class="slider-area">
             <div class="zigzag-bottom"></div>
@@ -167,8 +104,8 @@
                                                 <div class="slide-content">
                                                     <h2> {{carou.Contain1}}</h2>
                                                     <p>{{carou.P1}}</p>
-                                                    <p>{{carou.P11}}</p>
-                                                    <a href="" class="readmore">Learn more</a>
+                                                    <p id="Ajax">{{carou.P11}}</p>
+                                                    <a ng-click="LoadJson()" class="readmore">Learn more</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -534,86 +471,8 @@
             </div>
         </div> <!-- End product widget area -->
 
-        <div class="footer-top-area">
-            <div class="zigzag-bottom"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="footer-about-us">
-                            <h2>e<span>Electronics</span></h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus vero quam laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni at?</p>
-                            <div class="footer-social">
-                                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                <a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                        <div class="footer-menu">
-                            <h2 class="footer-wid-title">User Navigation </h2>
-                            <ul>
-                                <li><a href="#">My account</a></li>
-                                <li><a href="#">Order history</a></li>
-                                <li><a href="#">Wishlist</a></li>
-                                <li><a href="#">Vendor contact</a></li>
-                                <li><a href="#">Front page</a></li>
-                            </ul>                        
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                        <div class="footer-menu">
-                            <h2 class="footer-wid-title">Categories</h2>
-                            <ul>
-                                <li><a href="#">Mobile Phone</a></li>
-                                <li><a href="#">Home accesseries</a></li>
-                                <li><a href="#">LED TV</a></li>
-                                <li><a href="#">Computer</a></li>
-                                <li><a href="#">Gadets</a></li>
-                            </ul>                        
-                        </div>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6">
-                        <div class="footer-newsletter">
-                            <h2 class="footer-wid-title">Newsletter</h2>
-                            <p>Sign up to our newsletter and get exclusive deals you wont find anywhere else straight to your inbox!</p>
-                            <div class="newsletter-form">
-                                <form action="#">
-                                    <input type="email" placeholder="Type your email">
-                                    <input type="submit" value="Subscribe">
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- End footer top area -->
-
-        <div class="footer-bottom-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="copyright">
-                            <p>&copy; 2015 eElectronics. All Rights Reserved. Coded with </p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="footer-card-icon">
-                            <i class="fa fa-cc-discover"></i>
-                            <i class="fa fa-cc-mastercard"></i>
-                            <i class="fa fa-cc-paypal"></i>
-                            <i class="fa fa-cc-visa"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- End footer bottom area -->
+        <div ng-include="'template/footer.htm'"></div>
+        <!-- End footer  area -->
 
         <!-- Latest jQuery form server -->
         <script src="https://code.jquery.com/jquery.min.js"></script>
